java: Upgrade embedded JSch library to com.github.mwiede:jsch 2.28.6